# redirection

./: CMakeLists.txt  LICENSE.txt  dllmain.c
AdvAPI32/: CMakeLists.txt  Registry.c  advapi32.def  advapi_r.def
CBits/: CMakeLists.txt  CommandLineToArgv.c  CommandLineToArgv.h  CompilerSupport.c  ConfigReading.c  ConfigReading.h  FilePaths.c  FilePaths.h  ImportHelper.c  ImportHelper.h  MSVC.c  NTDLL.c  NTDLL.h  PartialStdio.c  PartialStdio.h  StringWrappers.c
CBits/PDCStringFuncs/: strncpy.c
Core/: CMakeLists.txt  CommandLineToArgv.c  CommandLineToArgv.h  FilePaths.c  FilePaths.h  ImportHelper.c  ImportHelper.h  MSVC.c  NTDLL.c  NTDLL.h  ThreadOps.c  ThreadOps.h  avl.h  stb_sprintf.h
Core/PDCStringFuncs/: memcpy.c  strcat.c  strcpy.c  strncat.c  strncpy.c  strxfrm.c
CorePlus/: CMakeLists.txt  PartialStdio.c  PartialStdio.h  StdAssert.c
DumpDef/: CMakeLists.txt  dumpdef.c
FixPE/: CMakeLists.txt  fixpe.c
IOTest/: CMakeLists.txt  IOTest.c
Interceptor/: CMakeLists.txt  IDLLMain.c  Intercept.c  Intercept.h  InterceptDLLs.c  InterceptDLLs.h  InterceptEXEs.c  InterceptEXEs.h  ways.def
Kernel32/: CMakeLists.txt  Clock.c  ConditionVariable.c  CriticalSection.c  IO.c  Locale.c  Memory.c  Processor.c  SEH.c  SRWLock.c  Semaphore.c  Test.c  kernel32.def  kernel_r.def
MorningGlory/: CMakeLists.txt
Patching/: CMakeLists.txt  ConfigReading.c  ConfigReading.h  HookFunction.c  HookFunction.h  InjectDLL.c  InjectDLL.h  RewriteImports.c  RewriteImports.h  ini.h
ProcessEntry/: CMakeLists.txt  MorningGlory.c  morning.def
Shimmer/: CMakeLists.txt  shimmer.c
User32/: CMakeLists.txt  user32.def  user_r.def
Ways/: CMakeLists.txt  IDLLMain.c  InterceptDLLs.c  InterceptIO.c  InterceptIO.h  InterceptThreads.h  InterceptWaits.c  InterceptWaits.h  ThreadLocal.c  ThreadLocal.h  ThreadPool.c  ThreadPool.h  ways.def
Ways/Exported/: WaysDef.h  WaysIO.h  WaysTLS.h  WaysTP.h
